<resources>
    <string name="app_name">&#160;UniDrive</string>
    <string name="app_version">V 1.0.0.8</string>
    <string name="china_mobile">中国移动</string>
    <string name="china_unicom">中国联通</string>
    <string name="china_telecom">中国电信</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="send">发送</string>
    <string name="reput">重新输入</string>
    <string name="prompt">提示</string>
    <string name="failed">失败</string>
    <string name="fetching_data">获取数据中,请稍后</string>
    <string name="day_after_tomorrow">后天</string>
    <string name="tomorrow">明天</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="day_before_yesterday">前天</string>
    <string name="load_more">查看更多</string>
    <string name="dianping_provide">大众点评dianping.com</string>
    <string name="download">下载</string>
    <string name="downloading">下载中…</string>
    <string name="contact_format">姓名：%1$s\n号码：%2$s</string>
    <string name="poi_geo_null">很抱歉，该地点没有位置，无法为您打开地图</string>
    <string name="forward_sms_answer">转发%1$s的信息</string>
    <string name="send_sms_answer">给%1$s的%2$s号码发短信</string>
    <string name="view_source_web">查看网页</string>
    <string name="data_empty">暂无</string>
    <string name="send_sms_exception">短信功能异常，发送短信失败</string>
    <string name="loading_text">准备中,请稍等</string>
    <string name="help_title">使用帮助</string>
    <string name="preference_general_setting">通用设置</string>
    <string name="setting_help">使用帮助</string>
    <string name="talk_network_exception">没有找到可用的网络，您可以检查一下网络设置</string>
    <string name="talk_server_exception">好像网络不给力哦，要不您一会儿再试一下？</string>
    <string name="talk_communication_err">网络出了点状况，请稍候再试一下</string>
    <string name="talk_network_outtime">当前网络有点繁忙，请过会再试</string>
    <string name="mic_exception">麦克风异常!</string>
    <string name="mic_prepare">正在准备...</string>
    <string name="mic_recording">正在倾听</string>
    <string name="mic_processing">正在识别...</string>
    <string name="mic_idle">点击说话</string>
    <string name="initing">数据准备中，请稍等...</string>
    <string name="grammar_data_compile">数据准备中...</string>
    <string name="see_help">查看帮助</string>
	<string name="mic_prepare_doreso">请哼唱出你想听的歌</string>
    <string name="memo">提醒</string>
    <string name="memo_list">提醒列表</string>
    <string name="to_do">待办</string>
    <string name="completed">已完成</string>
    <string name="close">关闭</string>
    <string name="missed_reminder_during_shutdown">不要忘记这些提醒哦：%s</string>
    <string name="missed_reminder">错过的提醒</string>
    <string name="reminder">提醒</string>
    <string name="memo_date_format">日期：%s</string>
    <string name="memo_time_format">时间：%s</string>
    <string name="memo_tostring_format">%1$s提醒您%2$s</string>
    <string name="delete_memo_prompt">确定删除吗？</string>
    <string name="memo_time_length_prompt_dd_hh_mm">%1$s天%2$s小时%3$s分钟</string>
    <string name="memo_time_length_prompt_hh_mm">%1$s小时%2$s分钟</string>
    <string name="memo_time_length_prompt_mm_ss">%1$s分%2$s秒</string>
    <string name="register_reminder_prompt">%s后提示</string>
    <string name="edit_datetime">编辑时间</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="memo_due_time_earlier_than_now">提醒时间早于现在哦</string>
    <string name="readable_time_yesterday">（昨天）</string>
    <string name="readable_time_day_before_yesterday">（前天）</string>
    <string name="readable_time_day_after_tomorrow">（后天）</string>
    <string name="readable_time_today">（今天）</string>
    <string name="readable_time_tomorrow">（明天）</string>
    <string name="three_days_later">（三天后）</string>
    <string name="four_days_later">（四天后）</string>
    <string name="five_days_later">（五天后）</string>
    <string name="six_days_later">（六天后）</string>
    <string name="seven_days_later">（七天后）</string>
    <string name="future">（未来）</string>
    <string name="toast_wakeup_open">语音唤醒已开启，口令为：“你好锐准”</string>
    <string name="toast_wakeup_closed">语音唤醒已关闭</string>
    <string name="locating">正在定位中，请稍候…</string>
    <string name="open_map">打开地图</string>
    <string name="select_map">选择地图</string>
    <string name="amap">高德地图</string>
    <string name="baidu">百度地图</string>
    <string name="amap_with_bracket">(高德地图)</string>
    <string name="baidu_with_bracket">(百度地图)</string>
    <string name="geo_reverse">解析地址中…</string>
    <string name="locate_failed">很抱歉，获取当前位置失败，无法提供查询服务</string>
    <string name="current_city">当前城市</string>
    <string name="current_position">当前位置</string>
    <string name="title_format_arg_info">信息</string>
    <string name="local_search_no_number">暂无号码</string>
    <string name="local_search_distance">距离%1$.2fKM</string>
    <string name="local_search_food_price">人均 ¥</string>
    <string name="unknown">未知</string>
    <string name="call_ok">立即拨打</string>
    <string name="call_cancel">取消</string>
    <string name="answer_call">接听电话</string>
    <string name="end_call">挂断电话</string>
    <string name="call_canceled">电话已挂断</string>
    <string name="call_receive">接听</string>
    <string name="call_reject">挂断</string>
    <string name="call_out">确定</string>
    <string name="call_out_name">呼叫%1$s :</string>
    <string name="call_out_input_contact_title">打电话给谁？</string>
    <string name="input_contact_tips">请说联系人，如“%1$s”</string>
    <string name="call_out_title_muti_contacts">找到%1$d个联系人 :</string>
    <string name="call_out_title_name_muti_number">找到\t%1$s\t的%2$d个号码 :</string>
    <string name="call_find_no_person">没有找到相关联系人</string>
    <string name="call_find_contact_no_number">没有找到该联系人的号码</string>
    <string name="default_name_no_contact_offline">“某某某”</string>
    <string name="default_name_no_contact_online">10086</string>
    <string name="button_text_i_know">我知道了</string>
    <string name="call_incoming_title_contact">%1$s\t来电</string>
    <string name="contact_name_default">张三</string>
    <string name="i_know_weather_error">天气查询失败，请说查询指定城市的天气</string>
	<string name="appmgr_find_no_app">没有找到相关应用</string>
	<string name="local_out_title_muti">找到以下%1$s,请选择:</string>
	<string name="local_data_form">数据来源于大众点评网</string>
	<string name="local_data_is_no">大众点评网数据为空</string>
	<string name="local_data_is_no_amap">定位出了点小问题！</string>
	<string name="brodcast_data_is_no_amap">您说的频段我还不支持！</string>
    <string name="search">搜索</string>
    <string name="music_url_empty">很抱歉，歌曲地址无法获取</string>
      <string name="music_recording">正在识别音乐旋律...</string>
    <string name="music_processing">让我想一想...</string>
    <string name="music_title_result_play">马上为你播放：</string>
    <string name="music_title_result_unknow">未能识别听到的音乐.</string>
    <string name="music_search_result">共为您找到%s首相关歌曲，点击查看</string>
    <string name="music_search_failed">很抱歉，没有找到相关歌曲</string>
    <string name="exit_music">退出音乐播放吗？</string>
    <string name="music_service_binder_error">音乐服务连接异常，请重试</string>
    <string name="music_playing">音乐已在播放中</string>
    <string name="location_heard_title">找到以下位置，请选择:</string>
    <string name="start_poi">起点：</string>
    <string name="end_poi">终点：</string>
    <string name="start_poi_location">我的位置</string>
    <string name="poi_data_empty">很抱歉，路线起点和终点数据为空，无法为您查找路线。</string>
    <string name="route_searching">查找路线中，请稍候&#8230;</string>
    <string name="bus_route_city_unequal">起止城市不相同，无法为您查询公交路线。</string>
    <string name="geo_reversing">解析位置中，请稍候&#8230;</string>
    <string name="geo_reverse_failed">很抱歉，解析位置失败</string>
    <string name="no_route_found">很抱歉，没有查找到路线</string>
    <string name="retry">重试</string>
    <string name="tarin_query_prompt_format">已为您查询到%1$s到%2$s的火车</string>
    <string name="flight_query_prompt_format">已为您查询到 %1$s%2$s到%3$s的航班</string>
    <string name="start_from_here">从这里出发</string>
    <string name="go_to_here">到这里去</string>
    <string name="save">保存</string>
    <string name="forwarding">转发</string>
    <string name="more">更多</string>
    <string name="geocode_prompt">解析地址中</string>
    <string name="geocode_failed">很抱歉，无法解析地址</string>
    <string name="address">地址：</string>
    <string name="phone">电话：</string>
    <string name="left_parentheses">（</string>
    <string name="right_parentheses">）</string>
    <string name="stock_query_empty">很抱歉，股票代码或者交易所名称为空，无法为您查询股票信息</string>
    <string name="broadcast_query_result">为您找到如下电台信息：</string>
    <string name="broadcast_query_result_empty">马上为你打开收音机</string>
    <string name="change_broadcast_format">调到%1$S</string>
    <string name="open_broadcast">打开电台应用</string>
    <string name="traffic_control_title">限行尾号：</string>
    <string name="traffic_control_text_and">和</string>
    <string name="traffic_control_rule_title">限行规则</string>
    <string name="week_monday">周一</string>
    <string name="week_tuesday">周二</string>
    <string name="week_wednesday">周三</string>
    <string name="week_thursday">周四</string>
    <string name="week_friday">周五</string>
    <string name="week_saturday">周六</string>
    <string name="week_weekend">周末</string>
    <string name="traffic_control_rule_no_limit">不限</string>
    <string name="preference_version">版本号</string>
    <string name="preference_about">关于我们</string>
    <string name="PreferenceSettingAutoOpenMic">启动后自动开始录音</string>
    <string name="PreferenceAutoOpenMic">启动语音助手后将自动开始录音</string>
    <string name="PreferenceClickOpenMic">启动语音助手后需要点击按钮开始录音</string>
    <string name="company">北京云知声信息技术有限公司</string>
    <string name="about_version">版本: %1$s</string>
    <string name="about_author">作者: 北京云知声信息技术有限公司</string>
    <string name="about_content_line2">打电话时搜索联系人很麻烦？用键盘发短信太繁琐？ \n云知声语音助手来帮助你解决这些问题。\n</string>
    <string name="about_content_line3">【产品特点】\n
	    1、打电话、发短信，简单方便  \n
	    2、天气查询、打开应用、搜索内容 \n
	    3、完美普通话支持，语音无处不在 \n
	    4、更多功能正在火速搭建中 \n
	</string>
    <string name="about_content_line4">【产品反馈】\n
	    欢迎大家@云知声，反馈您宝贵的意见 \n
	    我们会做得更好！ \n
	    \n
	    新浪微博：http://e.weibo.com/bjyzs \n
	    官方邮箱：ishuoshuo@yunzhisheng.cn \n
	    商务邮箱：support@yunzhisheng.cn \n
	    官方QQ：1172977637 \n
	    官方QQ群：145167715 \n
	</string>
    <string name="about_content_line5">【免责申明】\n
	    1、云知声语音助手的内容来自于互联网及用户自主分享，所有内容并不反映云知声任何意见及观点 \n
	    2、如果云知声语音助手的内容有侵犯到您的权益，请立即与我们联系，我们将在第一时间对内容进行处理 \n
	</string>
    <string name="about_copyright_line1">Copyright© 2012 Unisound Information Technology Co., Ltd.</string>
    <string name="about_copyright_line2">All rights reserved.</string>
    <string name="sms_input_contact_title">发短信给谁？</string>
    <string name="sms_to">发短信给\t%1$s:</string>
    <string name="sms_speak_content">请说短信内容</string>
    <string name="sms_activity_not_found">该设备暂不支持发送短信</string>
    <string name="smsMessageQueued">当前无法发送信息，将在服务恢复后发送</string>
    <string name="sms_sent_success">短信已发送！</string>
    <string name="sms_sending">短信发送中...</string>
    <string name="sms_sent_fail">短信发送失败！</string>
    <string name="sms_received_title_from">来自\t%1$s\t的新短信！</string>
    <string name="sms_received_btn_broadcast">播报</string>
    <string name="sms_received_btn_fast_reply">快捷回复</string>
    <string name="sms_received_btn_reply">回复</string>
    <string name="sms_content_fast_reply">"我正在开车，稍后再回复。"</string>
    <string name="speech_category_title">语音播报设置</string>
    <string name="other_setting">其他设置</string>
    <string name="tv_recomm_channel">频道</string>
    <string name="tv_recomm_time">时间</string>
    <string name="tv_recomm_detail">详情</string>
    <string name="no_recommend_programme">没有具体信息</string>
    <string name="tv_recommend_title">热门电视节目推荐</string>
    <string name="tv_recommend_no_recomm">没有热门电视节目推荐</string>
    <string name="setting_title_wakeup">语音唤醒</string>
    <string name="setting_wakeup_status_open">“你好锐准”</string>
    <string name="setting_title_map_choose">地图选择</string>
    <string name="setting_map_choose_gaode">高德</string>
    <string name="setting_title_tts_speed">播报速度</string>
    <string name="setting_tts_speed_standard">标准</string>
    <string name="setting_title_ota">版本升级</string>
    <string name="setting_ota_text_newest_version">当前为最新版本。</string>
</resources>