<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="22dip"
            android:layout_marginTop="10dip"
            android:src="@drawable/ic_launcher" >
        </ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="12dip"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textSize="18sp" >
                </TextView>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="16dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/about_version" >
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip"
                android:layout_marginLeft="6dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/about_author" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/divider" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dip"
                android:paddingLeft="22dip"
                android:paddingRight="22dip"
                android:paddingTop="6dip"
                android:text="@string/about_content_line2"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dip"
                android:paddingLeft="22dip"
                android:paddingRight="22dip"
                android:paddingTop="6dip"
                android:text="@string/about_content_line3"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email|web"
                android:paddingBottom="6dip"
                android:paddingLeft="22dip"
                android:paddingRight="22dip"
                android:paddingTop="6dip"
                android:text="@string/about_content_line4"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:paddingBottom="6dip"
                android:paddingLeft="22dip"
                android:paddingRight="22dip"
                android:paddingTop="6dip"
                android:text="@string/about_content_line5"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center"
            android:text="@string/about_copyright_line1" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:gravity="center"
            android:text="@string/about_copyright_line2" >
        </TextView>
    </LinearLayout>

</LinearLayout>